public/stylesheets/home2.css
/* ... */
#loader:before {
    content: "";
    position: absolute;
    top: 5px;
    left: 5px;
    right: 5px;
    bottom: 5px;
    border: 3px solid #ff8635;
}
#loader:after {
    content: "";
    position: absolute;
    top: 15px;
    left: 15px;
    right: 15px;
    bottom: 15px;
    border: 3px solid #ffde3d;
}
#loader {
 }
#loader:before {
    border: 3px solid transparent;
    border-top-color: #e74c3c;
    -webkit-animation: spin 1.5s linear infinite;
    animation: spin 1.5s linear infinite;
}
#loader:after {
    border: 3px solid transparent;
    border-top-color: #a8ff3a;
    -webkit-animation: spin 1.5s linear infinite;
    animation: spin 1.5s linear infinite;
}
#loader {
    border-radius: 50%;
}
#loader:before {
    border-radius: 50%;
}
#loader:after {
    border-radius: 50%;
}
#loader {
    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
}
#loader:before {
    -webkit-animation: spin 3s linear infinite;
    animation: spin 3s linear infinite;
}
@-webkit-keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
       -ms-transform: rotate(0deg);  /* IE 9 */
       transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}
@keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(0deg);  /* IE 9 */
        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}
#loader-wrapper .loader-section {
    position: fixed;
    top: 0;
    width: 51%;
    height: 100%;
}
#loader-wrapper
{
    background-color: #3f51b5;
    z-index: 1000;
}

#loader-wrapper .loader-section.section-left {
    left: 0;
}

#loader-wrapper .loader-section.section-right {
    right: 0;
}
#loader {
    z-index: 2000; /* anything higher than z-index: 1000 of .loader-section */
}

h1 {
    color: #EEEEEE;
}
/* Loaded */
.loaded #loader-wrapper .loader-section.section-left {
    -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateX(-100%);  /* IE 9 */
    transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
}

.loaded #loader-wrapper .loader-section.section-right {
    -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateX(100%);  /* IE 9 */
    transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
}
.loaded #loader {
    opacity: 0;
}
.loaded #loader-wrapper {
    visibility: hidden;
}
.loaded #loader {
    opacity: 0;
    -webkit-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}
.loaded #loader-wrapper .loader-section.section-right,
.loaded #loader-wrapper .loader-section.section-left {

    -webkit-transition: all 0.3s 0.3s ease-out;
    transition: all 0.3s 0.3s ease-out;
}
.loaded #loader-wrapper {
    -webkit-transform: translateY(-100%);
    -ms-transform: translateY(-100%);
    transform: translateY(-100%);

    -webkit-transition: all 0.3s 0.6s ease-out;
    transition: all 0.3s 0.6s ease-out;
}
.loaded #loader-wrapper .loader-section.section-right,
.loaded #loader-wrapper .loader-section.section-left {

    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
    transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}
.loaded #loader-wrapper {
    -webkit-transform: translateY(-100%);
    -ms-transform: translateY(-100%);
    transform: translateY(-100%);

    -webkit-transition: all 0.3s 1s ease-out;
    transition: all 0.3s 1s ease-out;
}
body {
    /**background: url('/images/homeback.jpg');**/
    /*background-color: #f57951;*/
	/*font: 16em/1 Arial;*/
	-moz-background-size: cover;
	-webkit-background-size: cover;
	background-size: cover;
	background-position: top center ;
	background-repeat: no-repeat;
	background-attachment: fixed;
	padding: 0;
	margin: 0;
    height: 100%;


}
#home
{
    width: 100%;
}
img {
	border: none;
}
#about1 {
    margin-top: 0;
   font-family: papyrus;
    padding: 40px;
    text-align: center;
    color: white;
    font-size: 35px;
    margin-top: 0px;
}
.heading
{
    text-align: center;
    font-size: 40px;
    font-family: papyrus;
    color: #E7D84B;
    -webkit-animation:opacity 12s ease-in backwards;
    text-shadow: 0px 0px 1px #fff;
}

#about1,#guests1,#events1,#schedule1,#register1,#sponsors1,#tg1,#cpg1
{
    display: none;
}
/* dock2 - bottom */
#dock2 {
	width: 100%;
	bottom: 50px;
	position: fixed;
	left: 0px;
    z-index: 500;
}
.dock-container2 {
	position: absolute;
	height: 50px;
	padding-left: 80px;
}
a.dock-item2 {
	display: block;
	font-size: 20px;
    font-weight: 400;
    font-family: "Roboto", sans-serif;
	width: 70px;
	color: #525252;
	bottom: 0px;
    margin-left: 10px;
	position: absolute;
	text-align: center;
	text-decoration: none;
}
.dock-item2 span {
	display: none;
	padding-left: 0;
}
.dock-item2 img {
	border: none; 
	margin: 5px 10px 0px; 
	width: 85%;

}
.text--line {
    font-size: .5em;
}
svg {
    position: relative;

}
#gravitas {
    fill: none;
    stroke: white;
    stroke-dasharray: 7% 28%;
    stroke-width: 3px;
    -webkit-animation: stroke-offset 15s forwards;
    animation: stroke-offset 7s  forwards;
}
#gravitas:nth-child(1) {
    stroke: #9714c1;
    stroke-dashoffset: 7%;
}
#gravitas:nth-child(2) {
    stroke: #ef4847;
    stroke-dashoffset: 14%;
}
#gravitas:nth-child(3) {
    stroke: #E7D84B;
    stroke-dashoffset: 21%;
}
#gravitas:nth-child(4) {
    stroke: #f44336;
    stroke-dashoffset: 28%;
}
/* ... */

